# truck_system_classifier

./: README.md
api/: handler.py
api/classify/: Classify.py
description/: Desafio Técnico - Descrição.docx
features/: standard_scaler_train.pkl
notebooks/: ciclo01_air_system_truck.ipynb  ciclo02_air_system_truck.ipynb  ciclo04_FINAL_air_system_truck_.ipynb  ciclo04_air_system_truck-Copy1.ipynb  ciclo04_air_system_truck_FINAL.ipynb  deploy_case.ipynb
notebooks/.ipynb_checkpoints/: ciclo02_air_system_truck-checkpoint.ipynb  ciclo03_air_system_truck-checkpoint.ipynb  ciclo04_FINAL_air_system_truck_-checkpoint.ipynb  ciclo04_air_system_truck-Copy1-checkpoint.ipynb  deploy_case-checkpoint.ipynb
venv-deploy/: pyproject.toml
venv_truck/: pyproject.toml
web_app/: handler.py  requirements.txt
web_app/classify/: Classify.py
web_app/model/: xgboost_classifier_final_model.pkl
