[tool.poetry]
name = "venv-deploy"
version = "0.1.0"
description = ""
authors = ["Jordan Malheiros <malheiros7j@gmail.com>"]
readme = "README.md"
packages = [{include = "venv_deploy"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
numpy = "^1.24.2"
pandas = "^1.5.3"
xgboost = "^1.7.4"
scikit-learn = "1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
